fix z-index for editing stacked sections
z-index:9000; moved from .gp_editing to .gp_edit_current

--- a/include/css/inline_edit.css
+++ b/include/css/inline_edit.css
@@ -246,10 +246,6 @@ html{
 	outline:none;
 	}
 
-.gp_editing{
-	z-index:9000;
-	}
-
 .editable_area:not(.filetype-wrapper_section):hover{
 	outline:1px dotted #ccc !important;
 	}
@@ -307,5 +303,4 @@ html{
 
 #ckeditor_wrap.ck_saving .ck_saving{
 	display:inline-block;
-}
 }
